[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alphanet-node.workspace = true
reth.workspace = true
reth-node-optimism.workspace = true
revm-primitives.workspace = true
reth-primitives.workspace = true
reth-node-core.workspace = true
reth-tracing.workspace = true

eyre.workspace = true
tokio.workspace = true
serde_json.workspace = true

[features]
default = [
  "reth/optimism",
  "reth-node-optimism/optimism",
  "revm-primitives/optimism",
]

[lints]
workspace = true

[[example]]
name = "custom-genesis-dev-node"
path = "custom-genesis-dev-node.rs"
[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alphanet-precompile.workspace = true
alphanet-instructions.workspace = true
alphanet-node.workspace = true
reth.workspace = true
reth-node-api.workspace = true
reth-node-optimism.workspace = true
revm.workspace = true
revm-interpreter.workspace = true
revm-precompile.workspace = true
revm-primitives.workspace = true
reth-primitives.workspace = true
reth-rpc-types.workspace = true
reth-node-core.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-ethereum-payload-builder.workspace = true
reth-node-ethereum.workspace = true
reth-tracing.workspace = true

eyre.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
futures-util.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[features]
default = [
  "alphanet-precompile/optimism",
  "alphanet-instructions/optimism",
  "reth/optimism",
  "reth-node-optimism/optimism",
  "revm/optimism",
  "revm-interpreter/optimism",
  "revm-precompile/optimism",
  "revm-primitives/optimism",
]

[lints]
workspace = true

[[example]]
name = "custom-genesis-dev-node"
path = "custom-genesis-dev-node.rs"