[package]
name = "examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alphanet-node.workspace = true
reth.workspace = true
reth-node-optimism.workspace = true
revm-primitives.workspace = true
reth-primitives.workspace = true
reth-node-core.workspace = true
reth-tracing.workspace = true

eyre.workspace = true
tokio.workspace = true
serde_json.workspace = true

[features]
default = [
  "reth/optimism",
  "reth-node-optimism/optimism",
  "revm-primitives/optimism",
]

[lints]
workspace = true

[[example]]
name = "custom-genesis-dev-node"
path = "custom-genesis-dev-node.rs"